--- a/html/index.html
+++ b/html/index.html
@@ -28,11 +28,96 @@
 <button id="delete_blogger">delete</button>
 <input id="delete_id" placeholder="id"/>
 <hr>
+<hr>
+
+<button id="create_post">create</button>
+<input id="create_blogger_id" placeholder="bloggerId"/>
+<input id="create_title" placeholder="title"/>
+<input id="create_content" placeholder="content"/>
+<input id="create_short_description" placeholder="shortDescription"/>
+<hr>
+<button id="read_posts">read posts</button>
+<input id="posts_page" placeholder="page"/>
+<input id="posts_page_size" placeholder="page size"/>
+<hr>
+<button id="find_post">find</button>
+<input id="find_post_id" placeholder="id"/>
+<hr>
+<button id="delete_post">delete</button>
+<input id="delete_post_id" placeholder="id"/>
+<hr>
+<button id="update_post">update</button>
+<input id="update_post_id" placeholder="postId"/>
+<input id="update_blogger_id" placeholder="bloggerId"/>
+<input id="update_title" placeholder="title"/>
+<input id="update_content" placeholder="content"/>
+<input id="update_short_description" placeholder="shortDescription"/>
+<hr>
 
 
 <div id="result"></div>
 
 <script>
+    read_posts.onclick = () => {
+        fetch('http://localhost:5000/posts?'
+            + '&PageNumber=' + posts_page.value
+            + '&PageSize=' + posts_page_size.value
+        )
+            .then(res => res.json())
+            .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
+    }
+    create_post.onclick = () => {
+        fetch('http://localhost:5000/posts', {
+            method: 'POST',
+            body: JSON.stringify({
+                bloggerId: create_blogger_id.value,
+                title: create_title.value,
+                content: create_content.value,
+                shortDescription: create_short_description.value,
+            }),
+            headers: {
+                'Content-Type': 'application/json',
+                authorization: 'Basic YWRtaW46cXdlcnR5'
+            },
+        })
+            .then(res => res.json())
+            .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
+    }
+    find_post.onclick = () => {
+        fetch('http://localhost:5000/posts/' + find_post_id.value)
+            .then(res => res.json())
+            .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
+    }
+    delete_post.onclick = () => {
+        fetch('http://localhost:5000/posts/' + delete_post_id.value, {
+            method: 'DELETE',
+            headers: {
+                'Content-Type': 'application/json',
+                authorization: 'Basic YWRtaW46cXdlcnR5'
+            },
+        })
+            .then(res => res.json())
+            .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
+    }
+    update_post.onclick = () => {
+        fetch('http://localhost:5000/posts/' + update_post_id.value, {
+            method: 'PUT',
+            body: JSON.stringify({
+                bloggerId: update_blogger_id.value,
+                title: update_title.value,
+                content: update_content.value,
+                shortDescription: update_short_description.value,
+            }),
+            headers: {
+                'Content-Type': 'application/json',
+                authorization: 'Basic YWRtaW46cXdlcnR5'
+            },
+        })
+            .then(res => res.json())
+            .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
+    }
+
+    //////////////////////////////////
     read_bloggers.onclick = () => {
         fetch('http://localhost:5000/bloggers?SearchNameTerm=' + search_name.value
             + '&PageNumber=' + page.value
