--- a/html/index.html
+++ b/html/index.html
@@ -29,6 +29,7 @@
 <input id="delete_id" placeholder="id"/>
 <hr>
 <hr>
+<hr>
 
 <button id="create_post">create</button>
 params: <input type="checkbox" id="create_blogger_params"/>
@@ -55,7 +56,16 @@ params: <input type="checkbox" id="create_blogger_params"/>
 <input id="update_content" placeholder="content"/>
 <input id="update_short_description" placeholder="shortDescription"/>
 <hr>
+<hr>
+<hr>
 
+<button id="add_user">add user</button>
+<input id="add_login" placeholder="login"/>
+<input id="add_pass" placeholder="password"/>
+<hr>
+<button id="sign_in">sign in</button>
+<input id="auth_login" placeholder="login"/>
+<input id="auth_pass" placeholder="password"/>
 
 <div id="result"></div>
 
@@ -202,6 +212,37 @@ params: <input type="checkbox" id="create_blogger_params"/>
             .then(res => res.json())
             .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
     }
+    ////////////////////////////////////////
+    add_user.onclick = () => {
+        fetch('http://localhost:5000/users/', {
+            method: 'POST',
+            body: JSON.stringify({
+                login: add_login.value,
+                password: add_pass.value,
+            }),
+            headers: {
+                'Content-Type': 'application/json',
+                authorization: 'Basic YWRtaW46cXdlcnR5'
+            },
+        })
+            .then(res => res.json())
+            .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
+    }
+    sign_in.onclick = () => {
+        fetch('http://localhost:5000/auth/login/', {
+            method: 'POST',
+            body: JSON.stringify({
+                login: auth_login.value,
+                password: auth_pass.value,
+            }),
+            headers: {
+                'Content-Type': 'application/json'
+            },
+        })
+            .then(res => res.json())
+            .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
+    }
+
 </script>
 </body>
 </html>
