--- a/html/index.html
+++ b/html/index.html
@@ -73,6 +73,16 @@ params: <input type="checkbox" id="create_blogger_params"/>
 <hr>
 <button id="delete_user">delete</button>
 <input id="delete_user_id" placeholder="id"/>
+<hr>
+<hr>
+<hr>
+<button id="add_comment">add comment</button>
+<input id="comment_post_id" placeholder="post id"/>
+<input id="comment_content" placeholder="content"/>
+<hr>
+<button id="read_comments">read comments</button>
+<input id="read_comment_post_id" placeholder="post id"/>
+
 
 <div id="result"></div>
 
@@ -235,6 +245,7 @@ params: <input type="checkbox" id="create_blogger_params"/>
             .then(res => res.json())
             .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
     }
+    const auth = {token: ''}
     sign_in.onclick = () => {
         fetch('http://localhost:5000/auth/login/', {
             method: 'POST',
@@ -247,7 +258,10 @@ params: <input type="checkbox" id="create_blogger_params"/>
             },
         })
             .then(res => res.json())
-            .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
+            .then(data => {
+                result.innerHTML = JSON.stringify(data) || 'ok'
+                auth.token = data.token
+            })
     }
     read_users.onclick = () => {
         fetch('http://localhost:5000/users'
@@ -265,6 +279,29 @@ params: <input type="checkbox" id="create_blogger_params"/>
                 authorization: 'Basic YWRtaW46cXdlcnR5'
             },
         })
+            .then(res => res.json())
+            .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
+    }
+    ////////////////////////////////////////////
+    add_comment.onclick = () => {
+        fetch('http://localhost:5000/posts/' + comment_post_id.value + '/comments', {
+            method: 'POST',
+            body: JSON.stringify({
+                content: comment_content.value,
+            }),
+            headers: {
+                'Content-Type': 'application/json',
+                authorization: 'Bearer ' + auth.token
+            },
+        })
+            .then(res => res.json())
+            .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
+    }
+    read_comments.onclick = () => {
+        fetch('http://localhost:5000/posts/'
+            + read_comment_post_id.value
+            + '/comments'
+        )
             .then(res => res.json())
             .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
     }
