--- a/html/index.html
+++ b/html/index.html
@@ -63,6 +63,14 @@ params: <input type="checkbox" id="create_blogger_params"/>
 <input id="add_login" placeholder="login"/>
 <input id="add_pass" placeholder="password"/>
 <hr>
+<button id="reg_user">reg user</button>
+<input id="reg_email" placeholder="email" value="nyakusnya@gmail.com"/>
+<hr>
+<button id="resend">resend</button>
+<hr>
+<button id="confirm_code">confirm code</button>
+<input id="conf_code" placeholder="code"/>
+<hr>
 <button id="sign_in">sign in</button>
 <input id="auth_login" placeholder="login"/>
 <input id="auth_pass" placeholder="password"/>
@@ -247,6 +255,47 @@ params: <input type="checkbox" id="create_blogger_params"/>
             headers: {
                 'Content-Type': 'application/json',
                 authorization: 'Basic YWRtaW46cXdlcnR5'
+            },
+        })
+            .then(res => res.json())
+            .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
+    }
+    resend.onclick = () => {
+        fetch('http://localhost:5000/auth/registration-email-resending', {
+            method: 'POST',
+            body: JSON.stringify({
+                email: reg_email.value,
+            }),
+            headers: {
+                'Content-Type': 'application/json',
+            },
+        })
+            .then(res => res.json())
+            .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
+    }
+    confirm_code.onclick = () => {
+        fetch('http://localhost:5000/auth/registration-conformation', {
+            method: 'POST',
+            body: JSON.stringify({
+                code: conf_code.value,
+            }),
+            headers: {
+                'Content-Type': 'application/json',
+            },
+        })
+            .then(res => res.json())
+            .then(data => result.innerHTML = JSON.stringify(data) || 'ok')
+    }
+    reg_user.onclick = () => {
+        fetch('http://localhost:5000/auth/registration', {
+            method: 'POST',
+            body: JSON.stringify({
+                login: add_login.value,
+                password: add_pass.value,
+                email: reg_email.value,
+            }),
+            headers: {
+                'Content-Type': 'application/json',
             },
         })
             .then(res => res.json())
